# mdec-tools

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: bitstream.h  dct.h  encode.cpp  encode.h  image.h  main.cpp  quant_tables.cpp  quant_tables.h  quantize.cpp  quantize.h  rle.cpp  rle.h  subsample.cpp  subsample.h  types.cpp  types.h  zigzag.h
